<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">proyecto_2_moviles</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nickname">Nickname</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="longitude">Initial Longitude</string>
    <string name="latitude">Initial Latitude</string>
    <string name="longitude_fin">Final Longitude</string>
    <string name="latitude_fin">Final Latitude</string>
    <string name="description">Description</string>
    <string name="user_det">User details</string>
    <string name="goal_det">Goal details</string>
    <string name="zombies_probability">Zombies probability</string>
    <string name="achie_det">Achievement details</string>
    <string name="chag_det">Challenge details</string>
    <string name="signin">Not account yet? Create one</string>
    <string name="btn_login">Log In</string>
    <string name="btn_signin">Sign In</string>
    <string name="btn_add">Add</string>

    <string name="title_activity_dashboard_admin">dashboard_admin</string>
    <string name="title_users">Users</string>
    <string name="title_challenges">Challenges</string>
    <string name="title_points">Achievements</string>
    <string name="title__new_challenges">New challenge</string>
    <string name="title_new_reward">New reward</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_player">playerActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
