<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="Vista.Admin.add_challenge">

    <EditText
        style="@style/txt_style"
        android:id="@+id/ch_name"
        android:text="@string/name"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        style="@style/txt_style"
        android:id="@+id/ch_des"
        android:text="@string/description"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        style="@style/txt_style"
        android:id="@+id/ch_lat"
        android:text="@string/latitude"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        style="@style/txt_style"
        android:id="@+id/ch_lon"
        android:text="@string/longitude"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="25dp"/>

    <Button
        style="@style/txt_style"
        android:text="@string/btn_add"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:onClick="add_challenge"/>

</LinearLayout>
