<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="Vista.signIn">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_gravity="center_horizontal"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/logo"/>

    <EditText
        style="@style/txt_style"
        android:id="@+id/txt_nickname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/nickname" />

    <EditText
        style="@style/txt_style"
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/email" />

    <!--style="@style/text_style"-->
    <EditText
        style="@style/txt_style"
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/password" />

    <Button
        style="@style/txt_style"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_signin"
        android:onClick="signIn"/>

</LinearLayout>
