<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="Vista.Admin.add_achievement">

    <EditText
        style="@style/txt_style"
        android:id="@+id/rw_name"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        style="@style/txt_style"
        android:id="@+id/rw_des"
        android:hint="@string/description"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        style="@style/txt_style"
        android:text="@string/btn_add"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:onClick="add_reward"/>

</LinearLayout>
