<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="com.mygdx.game.login">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_gravity="center_horizontal"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/email" />

    <!--style="@style/text_style"-->
    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_login"
        android:onClick="logIn"/>

</LinearLayout>
